@@ -231,15 +231,15 @@ int ssl_init_Module(apr_pool_t *p, apr_pool_t *plog,
 
     }
 
+#if APR_HAS_THREADS
+    ssl_util_thread_setup(p);
+#endif
+
     /*
      * SSL external crypto device ("engine") support
      */
 #if defined(HAVE_OPENSSL_ENGINE_H) && defined(HAVE_ENGINE_INIT)
     ssl_init_Engine(base_server, p);
-#endif
-
-#if APR_HAS_THREADS
-    ssl_util_thread_setup(p);
 #endif
 
     ap_log_error(APLOG_MARK, APLOG_INFO, 0, s,
